2007-03-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-locate-dmidecode.c: Replace u8, u16, u32,
	u64 typedefs with others, to protect against the possibility we
	collide with libc typedefs of the same name.
	
2007-03-08  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmi_monitoring.h,
	ipmimonitoring/src/ipmi_monitoring.c,
	ipmimonitoring/src/ipmi_monitoring_defs.h: Do not lock memory by
	default.

	* ipmiconsole/: Do not lock memory by default.  Adjust -L option
	appropriately.
	
2007-03-07  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_ipmiconsole_init_ctx_session): Return out of memory error on
	cbuf_create error.

	* ipmipower/ipmipower.8.in, ipmipower/src/ipmipower_config.c
	(ipmipower_config_cmdline_parse): Change -U option to -Z.

	* ipmipower/ipmipower.8.in, ipmipower/src/ipmipower_config.c
	(ipmipower_config_cmdline_parse), ipmiconsole/ipmiconsole.8.in,
	ipmiconsole/src/ipmiconsole/ipmiconsole_config.c (_cmdline_parse):
	Add -K option.
	
2007-03-06  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole.8.in, ipmiconsole/ipmiconsole.conf.5.in,
	ipmiconsole/src/ipmiconsole/ipmiconsole_config.h,
	ipmiconsole/src/ipmiconsole/ipmiconsole_config.c,
	ipmiconsole/src/ipmiconsole/ipmiconsole.c: Add -N option support.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_ipmiconsole_cleanup_ctx_session): Remove unnecessary
	conditional.

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_ipmiconsole_cleanup_ctx_session, _ipmiconsole_init_ctx_session):
	Fix mem initialization bug.

	* ipmiconsole/src/libipmiconsole/cbuf.h,
	ipmiconsole/src/libipmiconsole/cbuf.c: New files for ipmiconsole
	secure mallocs.

	* ipmiconsole/src/libipmiconsole/Makefile.am: Add cbuf.h and
	cbuf.c for new build.

	* common/src/cbuf.c: Remove secure malloc code.

	* common/src/Makefile.am: Split off cbuf into a separate lib.

	* ipmipower/src/Makefile.am, bmc-info/src/Makefile.am,